--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "genex",
-  "version": "0.1.0",
-  "description": "Genex module for Node.js",
+  "version": "0.1.1",
+  "description": "Genex module for browsers and Node.js",
   "main": "./lib/index.js",
   "directories": {
     "test": "test"
-  },
-  "dependencies": {
-    "ret": "~0.1.8",
-    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1"
@@ -18,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/alixaxel/genex.js.git"
+    "url": "git://github.com/flatr0ze/genex.git"
   },
   "keywords": [
     "regex",
@@ -27,7 +23,7 @@
   "author": "Alix Axel (https://github.com/alixaxel/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alixaxel/genex.js/issues"
+    "url": "https://github.com/flatr0ze/genex/issues"
   },
-  "homepage": "https://github.com/alixaxel/genex.js"
+  "homepage": "https://github.com/flatr0ze/genex"
 }
