--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "genex",
   "version": "0.1.1",
   "description": "Genex module for browsers and Node.js",
-  "main": "./lib/index.js",
+  "main": "./lib/genex.js",
   "directories": {
     "test": "test"
   },
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/flatr0ze/genex.git"
+    "url": "git://github.com/flatr0ze/genex.js.git"
   },
   "keywords": [
     "regex",
@@ -23,7 +23,7 @@
   "author": "Alix Axel (https://github.com/alixaxel/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/flatr0ze/genex/issues"
+    "url": "https://github.com/flatr0ze/genex.js/issues"
   },
-  "homepage": "https://github.com/flatr0ze/genex"
+  "homepage": "https://github.com/flatr0ze/genex.js"
 }
